@@ -381,4 +381,48 @@
     (test (:utf-8 :newline :crlf) '(1 2 nil 2 1))
     (test (:utf-8 :newline :crlf :replacement #\?) '(1 2 nil 2 1))))
 
+(with-test (:name (:lp-2054169 :lf))
+  (let ((string (make-string 2048 :initial-element #\x)))
+    (loop for x from 78 by 78 below 2048
+          do (setf (aref string x) #\Newline))
+    (setf (aref string 24) #\LATIN_SMALL_LETTER_E_WITH_ACUTE) ; 2-bytes in UTF-8
+    (with-open-file (s *test-path* :direction :output :external-format :utf-8 :if-exists :supersede)
+      (write-sequence string s))
+    (with-open-file (s *test-path* :external-format :utf-8)
+      (let ((positions
+             (loop for n from 0
+                   for pos = (file-position s)
+                   for char = (read-char s nil nil)
+                   collect pos
+                   if (null char) do (loop-finish))))
+        (assert (equal positions
+                       (loop with pos = 0
+                             for i from 0 to 2048
+                             collect pos
+                             if (and (> i 0) (= (mod i 78) 0)) do (incf pos 1)
+                             else if (= i 24) do (incf pos 2)
+                             else do (incf pos 1))))))))
+
+(with-test (:name (:lp-2054169 :crlf))
+  (let ((string (make-string 2048 :initial-element #\x)))
+    (loop for x from 78 by 78 below 2048
+          do (setf (aref string x) #\Newline))
+    (setf (aref string 24) #\LATIN_SMALL_LETTER_E_WITH_ACUTE) ; 2-bytes in UTF-8
+    (with-open-file (s *test-path* :direction :output
+                       :external-format '(:utf-8 :newline :crlf) :if-exists :supersede)
+      (write-sequence string s))
+    (with-open-file (s *test-path* :external-format '(:utf-8 :newline :crlf))
+      (let ((positions
+             (loop for n from 0
+                   for pos = (file-position s)
+                   for char = (read-char s nil nil)
+                   collect pos
+                   if (null char) do (loop-finish))))
+        (assert (equal positions
+                       (loop with pos = 0
+                             for i from 0 to 2048
+                             collect pos
+                             if (and (> i 0) (= (mod i 78) 0)) do (incf pos 2)
+                             else if (= i 24) do (incf pos 2)
+                             else do (incf pos 1))))))))
 (delete-file *test-path*)
